parser.output
Terminals unused in grammar

   T_LEQ


Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Class Classes
    3        | Class

    4 Class: T_IDENTIFIER '{' Members Methods '}'
    5      | T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' Members Methods '}'

    6 Members: Members Member
    7        | %empty

    8 Member: Type T_IDENTIFIER ';'

    9 Methods: Method Methods
   10        | %empty

   11 Method: T_IDENTIFIER '(' Parameters ')' T_PTR ReturnType '{' Body '}'

   12 Parameters: ParameterList
   13           | %empty

   14 ParameterList: Parameter ',' ParameterList
   15              | Parameter

   16 Parameter: Type T_IDENTIFIER

   17 Body: Declarations Statements ReturnStatement

   18 Declarations: Declarations Declaration
   19             | %empty

   20 Declaration: Type IdentifierList ';'

   21 IdentifierList: T_IDENTIFIER ',' IdentifierList
   22               | T_IDENTIFIER

   23 Statements: Statement Statements
   24           | %empty

   25 ReturnStatement: T_RETURN Expression ';'
   26                | %empty

   27 Statement: Assignment ';'
   28          | MethodCall ';'
   29          | IfElse
   30          | WhileLoop
   31          | Print ';'
   32          | DoWhile ';'

   33 Assignment: T_IDENTIFIER '=' Expression
   34           | T_IDENTIFIER '.' T_IDENTIFIER '=' Expression

   35 IfElse: T_IF Expression '{' Statement Statements '}'
   36       | T_IF Expression '{' Statement Statements '}' T_ELSE '{' Statement Statements '}'

   37 WhileLoop: T_WHILE Expression '{' Statement Statements '}'

   38 DoWhile: T_DO '{' Statement Statements '}' T_WHILE '(' Expression ')'

   39 Print: T_PRINT Expression

   40 Expression: Expression '+' Expression
   41           | Expression '-' Expression
   42           | Expression '*' Expression
   43           | Expression '/' Expression
   44           | Expression '>' Expression
   45           | Expression T_GEQ Expression
   46           | Expression T_EQUALS Expression
   47           | Expression T_AND Expression
   48           | Expression T_OR Expression
   49           | T_NOT Expression
   50           | '-' Expression
   51           | MethodCall
   52           | T_IDENTIFIER '.' T_IDENTIFIER
   53           | '(' Expression ')'
   54           | T_IDENTIFIER
   55           | T_NUMBER
   56           | T_TRUE
   57           | T_FALSE
   58           | T_NEW T_IDENTIFIER '(' Arguments ')'
   59           | T_NEW T_IDENTIFIER

   60 MethodCall: T_IDENTIFIER '.' T_IDENTIFIER '(' Arguments ')'
   61           | T_IDENTIFIER '(' Arguments ')'

   62 Arguments: ArgumentList
   63          | %empty

   64 ArgumentList: Argument ',' ArgumentList
   65             | Argument

   66 Argument: Expression

   67 Type: T_INTEGER
   68     | T_BOOLEAN
   69     | T_IDENTIFIER

   70 ReturnType: Type
   71           | T_NONE


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 38 53 58 60 61
')' (41) 11 38 53 58 60 61
'*' (42) 42
'+' (43) 40
',' (44) 14 21 64
'-' (45) 41 50
'.' (46) 34 52 60
'/' (47) 43
';' (59) 8 20 25 27 28 31 32
'=' (61) 33 34
'>' (62) 44
'{' (123) 4 5 11 35 36 37 38
'}' (125) 4 5 11 35 36 37 38
error (256)
T_PTR (258) 11
T_LEQ (259)
T_EQUALS (260) 46
T_AND (261) 47
T_OR (262) 48
T_NOT (263) 49
T_NUMBER (264) 55
T_TRUE (265) 56
T_FALSE (266) 57
T_INTEGER (267) 67
T_BOOLEAN (268) 68
T_NONE (269) 71
T_PRINT (270) 39
T_RETURN (271) 25
T_IF (272) 35 36
T_ELSE (273) 36
T_DO (274) 38
T_WHILE (275) 37 38
T_NEW (276) 58 59
T_EXTENDS (277) 5
T_IDENTIFIER (278) 4 5 8 11 16 21 22 33 34 52 54 58 59 60 61 69
T_GEQ (279) 45
UMINUS (280)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
Start (40)
    on left: 1, on right: 0
Classes (41)
    on left: 2 3, on right: 1 2
Class (42)
    on left: 4 5, on right: 2 3
Members (43)
    on left: 6 7, on right: 4 5 6
Member (44)
    on left: 8, on right: 6
Methods (45)
    on left: 9 10, on right: 4 5 9
Method (46)
    on left: 11, on right: 9
Parameters (47)
    on left: 12 13, on right: 11
ParameterList (48)
    on left: 14 15, on right: 12 14
Parameter (49)
    on left: 16, on right: 14 15
Body (50)
    on left: 17, on right: 11
Declarations (51)
    on left: 18 19, on right: 17 18
Declaration (52)
    on left: 20, on right: 18
IdentifierList (53)
    on left: 21 22, on right: 20 21
Statements (54)
    on left: 23 24, on right: 17 23 35 36 37 38
ReturnStatement (55)
    on left: 25 26, on right: 17
Statement (56)
    on left: 27 28 29 30 31 32, on right: 23 35 36 37 38
Assignment (57)
    on left: 33 34, on right: 27
IfElse (58)
    on left: 35 36, on right: 29
WhileLoop (59)
    on left: 37, on right: 30
DoWhile (60)
    on left: 38, on right: 32
Print (61)
    on left: 39, on right: 31
Expression (62)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59, on right: 25 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 53 66
MethodCall (63)
    on left: 60 61, on right: 28 51
Arguments (64)
    on left: 62 63, on right: 58 60 61
ArgumentList (65)
    on left: 64 65, on right: 62 64
Argument (66)
    on left: 66, on right: 64 65
Type (67)
    on left: 67 68 69, on right: 8 16 20 70
ReturnType (68)
    on left: 70 71, on right: 11


State 0

    0 $accept: . Start $end

    T_IDENTIFIER  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


State 1

    4 Class: T_IDENTIFIER . '{' Members Methods '}'
    5      | T_IDENTIFIER . T_EXTENDS T_IDENTIFIER '{' Members Methods '}'

    T_EXTENDS  shift, and go to state 5
    '{'        shift, and go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: Classes .

    $default  reduce using rule 1 (Start)


State 4

    2 Classes: Class . Classes
    3        | Class .

    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 3 (Classes)

    Classes  go to state 8
    Class    go to state 4


State 5

    5 Class: T_IDENTIFIER T_EXTENDS . T_IDENTIFIER '{' Members Methods '}'

    T_IDENTIFIER  shift, and go to state 9


State 6

    4 Class: T_IDENTIFIER '{' . Members Methods '}'

    $default  reduce using rule 7 (Members)

    Members  go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 Classes: Class Classes .

    $default  reduce using rule 2 (Classes)


State 9

    5 Class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER . '{' Members Methods '}'

    '{'  shift, and go to state 11


State 10

    4 Class: T_IDENTIFIER '{' Members . Methods '}'
    6 Members: Members . Member

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 10 (Methods)

    Member   go to state 15
    Methods  go to state 16
    Method   go to state 17
    Type     go to state 18


State 11

    5 Class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' . Members Methods '}'

    $default  reduce using rule 7 (Members)

    Members  go to state 19


State 12

   67 Type: T_INTEGER .

    $default  reduce using rule 67 (Type)


State 13

   68 Type: T_BOOLEAN .

    $default  reduce using rule 68 (Type)


State 14

   11 Method: T_IDENTIFIER . '(' Parameters ')' T_PTR ReturnType '{' Body '}'
   69 Type: T_IDENTIFIER .

    '('  shift, and go to state 20

    $default  reduce using rule 69 (Type)


State 15

    6 Members: Members Member .

    $default  reduce using rule 6 (Members)


State 16

    4 Class: T_IDENTIFIER '{' Members Methods . '}'

    '}'  shift, and go to state 21


State 17

    9 Methods: Method . Methods

    T_IDENTIFIER  shift, and go to state 22

    $default  reduce using rule 10 (Methods)

    Methods  go to state 23
    Method   go to state 17


State 18

    8 Member: Type . T_IDENTIFIER ';'

    T_IDENTIFIER  shift, and go to state 24


State 19

    5 Class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' Members . Methods '}'
    6 Members: Members . Member

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 10 (Methods)

    Member   go to state 15
    Methods  go to state 25
    Method   go to state 17
    Type     go to state 18


State 20

   11 Method: T_IDENTIFIER '(' . Parameters ')' T_PTR ReturnType '{' Body '}'

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 13 (Parameters)

    Parameters     go to state 27
    ParameterList  go to state 28
    Parameter      go to state 29
    Type           go to state 30


State 21

    4 Class: T_IDENTIFIER '{' Members Methods '}' .

    $default  reduce using rule 4 (Class)


State 22

   11 Method: T_IDENTIFIER . '(' Parameters ')' T_PTR ReturnType '{' Body '}'

    '('  shift, and go to state 20


State 23

    9 Methods: Method Methods .

    $default  reduce using rule 9 (Methods)


State 24

    8 Member: Type T_IDENTIFIER . ';'

    ';'  shift, and go to state 31


State 25

    5 Class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' Members Methods . '}'

    '}'  shift, and go to state 32


State 26

   69 Type: T_IDENTIFIER .

    $default  reduce using rule 69 (Type)


State 27

   11 Method: T_IDENTIFIER '(' Parameters . ')' T_PTR ReturnType '{' Body '}'

    ')'  shift, and go to state 33


State 28

   12 Parameters: ParameterList .

    $default  reduce using rule 12 (Parameters)


State 29

   14 ParameterList: Parameter . ',' ParameterList
   15              | Parameter .

    ','  shift, and go to state 34

    $default  reduce using rule 15 (ParameterList)


State 30

   16 Parameter: Type . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 35


State 31

    8 Member: Type T_IDENTIFIER ';' .

    $default  reduce using rule 8 (Member)


State 32

    5 Class: T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' Members Methods '}' .

    $default  reduce using rule 5 (Class)


State 33

   11 Method: T_IDENTIFIER '(' Parameters ')' . T_PTR ReturnType '{' Body '}'

    T_PTR  shift, and go to state 36


State 34

   14 ParameterList: Parameter ',' . ParameterList

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_IDENTIFIER  shift, and go to state 26

    ParameterList  go to state 37
    Parameter      go to state 29
    Type           go to state 30


State 35

   16 Parameter: Type T_IDENTIFIER .

    $default  reduce using rule 16 (Parameter)


State 36

   11 Method: T_IDENTIFIER '(' Parameters ')' T_PTR . ReturnType '{' Body '}'

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_NONE        shift, and go to state 38
    T_IDENTIFIER  shift, and go to state 26

    Type        go to state 39
    ReturnType  go to state 40


State 37

   14 ParameterList: Parameter ',' ParameterList .

    $default  reduce using rule 14 (ParameterList)


State 38

   71 ReturnType: T_NONE .

    $default  reduce using rule 71 (ReturnType)


State 39

   70 ReturnType: Type .

    $default  reduce using rule 70 (ReturnType)


State 40

   11 Method: T_IDENTIFIER '(' Parameters ')' T_PTR ReturnType . '{' Body '}'

    '{'  shift, and go to state 41


State 41

   11 Method: T_IDENTIFIER '(' Parameters ')' T_PTR ReturnType '{' . Body '}'

    $default  reduce using rule 19 (Declarations)

    Body          go to state 42
    Declarations  go to state 43


State 42

   11 Method: T_IDENTIFIER '(' Parameters ')' T_PTR ReturnType '{' Body . '}'

    '}'  shift, and go to state 44


State 43

   17 Body: Declarations . Statements ReturnStatement
   18 Declarations: Declarations . Declaration

    T_INTEGER     shift, and go to state 12
    T_BOOLEAN     shift, and go to state 13
    T_PRINT       shift, and go to state 45
    T_IF          shift, and go to state 46
    T_DO          shift, and go to state 47
    T_WHILE       shift, and go to state 48
    T_IDENTIFIER  shift, and go to state 49

    $default  reduce using rule 24 (Statements)

    Declaration  go to state 50
    Statements   go to state 51
    Statement    go to state 52
    Assignment   go to state 53
    IfElse       go to state 54
    WhileLoop    go to state 55
    DoWhile      go to state 56
    Print        go to state 57
    MethodCall   go to state 58
    Type         go to state 59


State 44

   11 Method: T_IDENTIFIER '(' Parameters ')' T_PTR ReturnType '{' Body '}' .

    $default  reduce using rule 11 (Method)


State 45

   39 Print: T_PRINT . Expression

    T_NOT         shift, and go to state 60
    T_NUMBER      shift, and go to state 61
    T_TRUE        shift, and go to state 62
    T_FALSE       shift, and go to state 63
    T_NEW         shift, and go to state 64
    T_IDENTIFIER  shift, and go to state 65
    '-'           shift, and go to state 66
    '('           shift, and go to state 67

    Expression  go to state 68
    MethodCall  go to state 69


State 46

   35 IfElse: T_IF . Expression '{' Statement Statements '}'
   36       | T_IF . Expression '{' Statement Statements '}' T_ELSE '{' Statement Statements '}'

    T_NOT         shift, and go to state 60
    T_NUMBER      shift, and go to state 61
    T_TRUE        shift, and go to state 62
    T_FALSE       shift, and go to state 63
    T_NEW         shift, and go to state 64
    T_IDENTIFIER  shift, and go to state 65
    '-'           shift, and go to state 66
    '('           shift, and go to state 67

    Expression  go to state 70
    MethodCall  go to state 69


State 47

   38 DoWhile: T_DO . '{' Statement Statements '}' T_WHILE '(' Expression ')'

    '{'  shift, and go to state 71


State 48

   37 WhileLoop: T_WHILE . Expression '{' Statement Statements '}'

    T_NOT         shift, and go to state 60
    T_NUMBER      shift, and go to state 61
    T_TRUE        shift, and go to state 62
    T_FALSE       shift, and go to state 63
    T_NEW         shift, and go to state 64
    T_IDENTIFIER  shift, and go to state 65
    '-'           shift, and go to state 66
    '('           shift, and go to state 67

    Expression  go to state 72
    MethodCall  go to state 69


State 49

   33 Assignment: T_IDENTIFIER . '=' Expression
   34           | T_IDENTIFIER . '.' T_IDENTIFIER '=' Expression
   60 MethodCall: T_IDENTIFIER . '.' T_IDENTIFIER '(' Arguments ')'
   61           | T_IDENTIFIER . '(' Arguments ')'
   69 Type: T_IDENTIFIER .

    '('  shift, and go to state 73
    '='  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 69 (Type)


State 50

   18 Declarations: Declarations Declaration .

    $default  reduce using rule 18 (Declarations)


State 51

   17 Body: Declarations Statements . ReturnStatement

    T_RETURN  shift, and go to state 76

    $default  reduce using rule 26 (ReturnStatement)

    ReturnStatement  go to state 77


State 52

   23 Statements: Statement . Statements

    T_PRINT       shift, and go to state 45
    T_IF          shift, and go to state 46
    T_DO          shift, and go to state 47
    T_WHILE       shift, and go to state 48
    T_IDENTIFIER  shift, and go to state 78

    $default  reduce using rule 24 (Statements)

    Statements  go to state 79
    Statement   go to state 52
    Assignment  go to state 53
    IfElse      go to state 54
    WhileLoop   go to state 55
    DoWhile     go to state 56
    Print       go to state 57
    MethodCall  go to state 58


State 53

   27 Statement: Assignment . ';'

    ';'  shift, and go to state 80


State 54

   29 Statement: IfElse .

    $default  reduce using rule 29 (Statement)


State 55

   30 Statement: WhileLoop .

    $default  reduce using rule 30 (Statement)


State 56

   32 Statement: DoWhile . ';'

    ';'  shift, and go to state 81


State 57

   31 Statement: Print . ';'

    ';'  shift, and go to state 82


State 58

   28 Statement: MethodCall . ';'

    ';'  shift, and go to state 83


State 59

   20 Declaration: Type . IdentifierList ';'

    T_IDENTIFIER  shift, and go to state 84

    IdentifierList  go to state 85


State 60

   49 Expression: T_NOT . Expression

    T_NOT         shift, and go to state 60
    T_NUMBER      shift, and go to state 61
    T_TRUE        shift, and go to state 62
    T_FALSE       shift, and go to state 63
    T_NEW         shift, and go to state 64
    T_IDENTIFIER  shift, and go to state 65
    '-'           shift, and go to state 66
    '('           shift, and go to state 67

    Expression  go to state 86
    MethodCall  go to state 69


State 61

   55 Expression: T_NUMBER .

    $default  reduce using rule 55 (Expression)


State 62

   56 Expression: T_TRUE .

    $default  reduce using rule 56 (Expression)


State 63

   57 Expression: T_FALSE .

    $default  reduce using rule 57 (Expression)


State 64

   58 Expression: T_NEW . T_IDENTIFIER '(' Arguments ')'
   59           | T_NEW . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 87


State 65

   52 Expression: T_IDENTIFIER . '.' T_IDENTIFIER
   54           | T_IDENTIFIER .
   60 MethodCall: T_IDENTIFIER . '.' T_IDENTIFIER '(' Arguments ')'
   61           | T_IDENTIFIER . '(' Arguments ')'

    '('  shift, and go to state 73
    '.'  shift, and go to state 88

    $default  reduce using rule 54 (Expression)


State 66

   50 Expression: '-' . Expression

    T_NOT         shift, and go to state 60
    T_NUMBER      shift, and go to state 61
    T_TRUE        shift, and go to state 62
    T_FALSE       shift, and go to state 63
    T_NEW         shift, and go to state 64
    T_IDENTIFIER  shift, and go to state 65
    '-'           shift, and go to state 66
    '('           shift, and go to state 67

    Expression  go to state 89
    MethodCall  go to state 69


State 67

   53 Expression: '(' . Expression ')'

    T_NOT         shift, and go to state 60
    T_NUMBER      shift, and go to state 61
    T_TRUE        shift, and go to state 62
    T_FALSE       shift, and go to state 63
    T_NEW         shift, and go to state 64
    T_IDENTIFIER  shift, and go to state 65
    '-'           shift, and go to state 66
    '('           shift, and go to state 67

    Expression  go to state 90
    MethodCall  go to state 69


State 68

   39 Print: T_PRINT Expression .
   40 Expression: Expression . '+' Expression
   41           | Expression . '-' Expression
   42           | Expression . '*' Expression
   43           | Expression . '/' Expression
   44           | Expression . '>' Expression
   45           | Expression . T_GEQ Expression
   46           | Expression . T_EQUALS Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression

    T_EQUALS  shift, and go to state 91
    T_AND     shift, and go to state 92
    T_OR      shift, and go to state 93
    '>'       shift, and go to state 94
    T_GEQ     shift, and go to state 95
    '+'       shift, and go to state 96
    '-'       shift, and go to state 97
    '*'       shift, and go to state 98
    '/'       shift, and go to state 99

    $default  reduce using rule 39 (Print)


State 69

   51 Expression: MethodCall .

    $default  reduce using rule 51 (Expression)


State 70

   35 IfElse: T_IF Expression . '{' Statement Statements '}'
   36       | T_IF Expression . '{' Statement Statements '}' T_ELSE '{' Statement Statements '}'
   40 Expression: Expression . '+' Expression
   41           | Expression . '-' Expression
   42           | Expression . '*' Expression
   43           | Expression . '/' Expression
   44           | Expression . '>' Expression
   45           | Expression . T_GEQ Expression
   46           | Expression . T_EQUALS Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression

    T_EQUALS  shift, and go to state 91
    T_AND     shift, and go to state 92
    T_OR      shift, and go to state 93
    '>'       shift, and go to state 94
    T_GEQ     shift, and go to state 95
    '+'       shift, and go to state 96
    '-'       shift, and go to state 97
    '*'       shift, and go to state 98
    '/'       shift, and go to state 99
    '{'       shift, and go to state 100


State 71

   38 DoWhile: T_DO '{' . Statement Statements '}' T_WHILE '(' Expression ')'

    T_PRINT       shift, and go to state 45
    T_IF          shift, and go to state 46
    T_DO          shift, and go to state 47
    T_WHILE       shift, and go to state 48
    T_IDENTIFIER  shift, and go to state 78

    Statement   go to state 101
    Assignment  go to state 53
    IfElse      go to state 54
    WhileLoop   go to state 55
    DoWhile     go to state 56
    Print       go to state 57
    MethodCall  go to state 58


State 72

   37 WhileLoop: T_WHILE Expression . '{' Statement Statements '}'
   40 Expression: Expression . '+' Expression
   41           | Expression . '-' Expression
   42           | Expression . '*' Expression
   43           | Expression . '/' Expression
   44           | Expression . '>' Expression
   45           | Expression . T_GEQ Expression
   46           | Expression . T_EQUALS Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression

    T_EQUALS  shift, and go to state 91
    T_AND     shift, and go to state 92
    T_OR      shift, and go to state 93
    '>'       shift, and go to state 94
    T_GEQ     shift, and go to state 95
    '+'       shift, and go to state 96
    '-'       shift, and go to state 97
    '*'       shift, and go to state 98
    '/'       shift, and go to state 99
    '{'       shift, and go to state 102


State 73

   61 MethodCall: T_IDENTIFIER '(' . Arguments ')'

    T_NOT         shift, and go to state 60
    T_NUMBER      shift, and go to state 61
    T_TRUE        shift, and go to state 62
    T_FALSE       shift, and go to state 63
    T_NEW         shift, and go to state 64
    T_IDENTIFIER  shift, and go to state 65
    '-'           shift, and go to state 66
    '('           shift, and go to state 67

    $default  reduce using rule 63 (Arguments)

    Expression    go to state 103
    MethodCall    go to state 69
    Arguments     go to state 104
    ArgumentList  go to state 105
    Argument      go to state 106


State 74

   33 Assignment: T_IDENTIFIER '=' . Expression

    T_NOT         shift, and go to state 60
    T_NUMBER      shift, and go to state 61
    T_TRUE        shift, and go to state 62
    T_FALSE       shift, and go to state 63
    T_NEW         shift, and go to state 64
    T_IDENTIFIER  shift, and go to state 65
    '-'           shift, and go to state 66
    '('           shift, and go to state 67

    Expression  go to state 107
    MethodCall  go to state 69


State 75

   34 Assignment: T_IDENTIFIER '.' . T_IDENTIFIER '=' Expression
   60 MethodCall: T_IDENTIFIER '.' . T_IDENTIFIER '(' Arguments ')'

    T_IDENTIFIER  shift, and go to state 108


State 76

   25 ReturnStatement: T_RETURN . Expression ';'

    T_NOT         shift, and go to state 60
    T_NUMBER      shift, and go to state 61
    T_TRUE        shift, and go to state 62
    T_FALSE       shift, and go to state 63
    T_NEW         shift, and go to state 64
    T_IDENTIFIER  shift, and go to state 65
    '-'           shift, and go to state 66
    '('           shift, and go to state 67

    Expression  go to state 109
    MethodCall  go to state 69


State 77

   17 Body: Declarations Statements ReturnStatement .

    $default  reduce using rule 17 (Body)


State 78

   33 Assignment: T_IDENTIFIER . '=' Expression
   34           | T_IDENTIFIER . '.' T_IDENTIFIER '=' Expression
   60 MethodCall: T_IDENTIFIER . '.' T_IDENTIFIER '(' Arguments ')'
   61           | T_IDENTIFIER . '(' Arguments ')'

    '('  shift, and go to state 73
    '='  shift, and go to state 74
    '.'  shift, and go to state 75


State 79

   23 Statements: Statement Statements .

    $default  reduce using rule 23 (Statements)


State 80

   27 Statement: Assignment ';' .

    $default  reduce using rule 27 (Statement)


State 81

   32 Statement: DoWhile ';' .

    $default  reduce using rule 32 (Statement)


State 82

   31 Statement: Print ';' .

    $default  reduce using rule 31 (Statement)


State 83

   28 Statement: MethodCall ';' .

    $default  reduce using rule 28 (Statement)


State 84

   21 IdentifierList: T_IDENTIFIER . ',' IdentifierList
   22               | T_IDENTIFIER .

    ','  shift, and go to state 110

    $default  reduce using rule 22 (IdentifierList)


State 85

   20 Declaration: Type IdentifierList . ';'

    ';'  shift, and go to state 111


State 86

   40 Expression: Expression . '+' Expression
   41           | Expression . '-' Expression
   42           | Expression . '*' Expression
   43           | Expression . '/' Expression
   44           | Expression . '>' Expression
   45           | Expression . T_GEQ Expression
   46           | Expression . T_EQUALS Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   49           | T_NOT Expression .

    $default  reduce using rule 49 (Expression)


State 87
